# game_of_life

./: .gitlab-ci.yml  CMakeLists.txt  main.cpp
